crates/bevy_ecs/compile_fail/tests/ui/rust2024_captured_lifetimes.stderr
error[E0277]: `for<'a> fn(bevy_ecs::change_detection::Res<'a, MyScene>) -> impl Scene {make_scene}` does not describe a valid system configuration
  --> tests/ui/rust2024_captured_lifetimes.rs:16:26
   |
16 |     schedule.add_systems(make_scene);
   |              ----------- ^^^^^^^^^^ invalid system configuration
   |              |
   |              required by a bound introduced by this call
   |
   = help: the trait `IntoSystem<(), (), _>` is not implemented for fn item `for<'a> fn(bevy_ecs::change_detection::Res<'a, MyScene>) -> impl Scene {make_scene}`
   = note: If `for<'a> fn(bevy_ecs::change_detection::Res<'a, MyScene>) -> impl Scene {make_scene}` is a function and returns `impl Trait`, it may capture lifetimes from its parameters.
           In Rust 2024, returning `impl Trait` from a function implicitly captures all lifetimes in scope. You can opt out of this by adding `+ use<>` to the return type: `impl Trait + use<>`
help: the following other types implement trait `IntoSystem<In, Out, Marker>`
  --> crates/bevy_ecs/src/system/builder.rs:284:0
  ::: crates/bevy_ecs/src/system/builder.rs:291:69
   |
   = note: `IntoBuilderSystem<Marker, In, Out, Func, Builder>` implements `IntoSystem<In, Out, (bevy_ecs::system::IsBuilderSystem, Marker)>`
  --> crates/bevy_ecs/src/system/adapter_system.rs:84:0
  ::: crates/bevy_ecs/src/system/adapter_system.rs:89:27
   |
   = note: `IntoAdapterSystem<Func, S>` implements `IntoSystem<<Func as Adapt<...>>::In, ..., ...>`
  --> crates/bevy_ecs/src/system/combinator.rs:303:0
  ::: crates/bevy_ecs/src/system/combinator.rs:309:44
   |
   = note: `IntoPipeSystem<A, B>` implements `IntoSystem<IA, OB, (bevy_ecs::system::IsPipeSystemMarker, OA, IB, MA, MB)>`
   = note: required for `for<'a> fn(bevy_ecs::change_detection::Res<'a, MyScene>) -> impl Scene {make_scene}` to implement `IntoScheduleConfigs<Box<(dyn bevy_ecs::system::System<In = (), Out = ()> + 'static)>, _>`
note: required by a bound in `bevy_ecs::schedule::Schedule::add_systems`
  --> crates/bevy_ecs/src/schedule/schedule.rs:430:4
   = note: the full name for the type has been written to '$BEVY_ROOT/bevy_ecs/compile_fail/target/ui/0/tests/ui/rust2024_captured_lifetimes.long-type-13086334430028765271.txt'
   = note: consider using `--verbose` to print the full type name to the console

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
